Fast resolution of adminable workspaces and build improved security filter
Introduce a new API to obtain a quick summary of adminable workspaces and visible layers.

The workspace and layers visibility summary serves two purposes:

* Allows the `ResourceAccessManager.isWorkspaceAdmin(Authentication, Catalog)`
  implementation to quickly resolve whether the user is a workspace admin.
* Allows the `ResourceAccessManager.getSecurityFilter(Authentication, Class<? extends CatalogInfo>)`
  implementation to build a Filter that can be translated to the Catalog
  and eventually to the catalog backend (e.g. a database)
