# src/integration/openapi/model-mapping/src/main/java/org/geoserver/acl/api/mapper/AuthorizationModelApiMapper.java
@@ -6,11 +6,17 @@ package org.geoserver.acl.api.mapper;
 
 import org.geoserver.acl.api.model.AccessInfo;
 import org.geoserver.acl.api.model.AccessRequest;
+import org.geoserver.acl.api.model.AccessSummaryRequest;
 import org.geoserver.acl.api.model.AdminAccessInfo;
 import org.geoserver.acl.api.model.AdminAccessRequest;
+import org.geoserver.acl.authorization.AccessSummary;
+import org.geoserver.acl.authorization.WorkspaceAccessSummary;
 import org.mapstruct.InjectionStrategy;
 import org.mapstruct.Mapper;
 import org.mapstruct.ReportingPolicy;
+
+import java.util.List;
+import java.util.Optional;
 
 @Mapper(
         componentModel = "spring",
@@ -34,4 +40,24 @@ public interface AuthorizationModelApiMapper {
     AdminAccessInfo toApi(org.geoserver.acl.authorization.AdminAccessInfo grant);
 
     org.geoserver.acl.authorization.AdminAccessInfo toModel(AdminAccessInfo grant);
+
+    AccessSummaryRequest toApi(org.geoserver.acl.authorization.AccessSummaryRequest request);
+
+    org.geoserver.acl.authorization.AccessSummaryRequest toModel(AccessSummaryRequest request);
+
+    org.geoserver.acl.api.model.AccessSummary toApi(AccessSummary apiResponse);
+
+    default AccessSummary toModel(org.geoserver.acl.api.model.AccessSummary apiResponse) {
+        if (apiResponse == null) {
+            return null;
+        }
+        List<WorkspaceAccessSummary> workspaces =
+                Optional.ofNullable(apiResponse.getWorkspaces()).orElse(List.of()).stream()
+                        .map(this::workspaceAccessSummary)
+                        .toList();
+        return AccessSummary.of(workspaces);
+    }
+
+    WorkspaceAccessSummary workspaceAccessSummary(
+            org.geoserver.acl.api.model.WorkspaceAccessSummary workspaceAccessSummary);
 }
