# src/openapi/acl-api.yaml
@@ -629,6 +629,23 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/PageOfRules'
+  /authorization/accesssummary:
+    post:
+      operationId: getUserAccessSummary
+      tags:
+        - Authorization
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccessSummaryRequest'
+          application/x-jackson-smile:
+            schema:
+              $ref: '#/components/schemas/AccessSummaryRequest'
+      responses:
+        '200':
+          $ref: '#/components/responses/AccessSummary'
 
 components:
   securitySchemes:
@@ -757,6 +774,15 @@ components:
         application/x-jackson-smile:
           schema:
             $ref: '#/components/schemas/AdminAccessInfo'
+    AccessSummary:
+      description: The list of per-workspace access summary for a user
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AccessSummary'
+        application/x-jackson-smile:
+          schema:
+            $ref: '#/components/schemas/AccessSummary'
   schemas:
     CatalogMode:
       type: string
@@ -1156,4 +1182,58 @@ components:
           type: string
         matchingAdminRule:
           type: string
-        
+
+    AccessSummaryRequest:
+      type: object
+      required:
+      - user
+      - roles
+      properties:
+        user:
+          description: the authentication user name
+          type: string
+        roles:
+          description: The roles the requesting user belongs to
+          type: array
+          nullable: false
+          uniqueItems: true
+          items:
+            type: string
+
+    AccessSummary:
+      type: object
+      properties:
+        workspaces:
+          type: array
+          items:
+            $ref: '#/components/schemas/WorkspaceAccessSummary'
+
+    WorkspaceAccessSummary:
+      type: object
+      properties:
+        workspace:
+          type: string
+        adminAccess:
+          $ref: '#/components/schemas/AdminGrantType'          
+          description: The roles the requesting user belongs to
+        allowed:
+          description: |-
+              The set of visible layer names in `workspace` the user from the
+              `AccessSummaryRequest` can somehow see, even if only under specific circumstances like for a
+              given OWS/request combination, resulting from `GrantType.ALLOW` rules.
+          type: array
+          nullable: true
+          uniqueItems: true
+          items:
+            type: string
+        forbidden:
+          description: |-
+              The set of forbidden layer names in `workspace` the user from the
+              `AccessSummaryRequest` definitely cannot see, resulting from `GrantType.DENY rules.
+              Complements the `allowed` list as there may be rules allowing access all layers in
+              a workspace after a rules denying access to specific layers in the same workspace.
+          type: array
+          nullable: true
+          uniqueItems: true
+          items:
+            type: string
